# structenv

./: Cargo.toml  LICENSE-MIT  README.md
structenv/: .env  Cargo.toml
structenv-derive/: Cargo.toml
structenv-derive/src/: lib.rs
structenv/examples/: test.rs
structenv/src/: lib.rs
