[package]
name = "structenv-derive"
version = "1.0.1"
authors = ["paul <paul@hupaul.com>"]
repository = "https://github.com/paulzql/structenv"
keywords = ["struct", "enviroment", "dotenv", "derive"]
categories = ["command-line-interface"]
license = "MIT"
readme = "../README.md"
description = "deserialize environment variables into rust structs and serialize struct to `.env` file"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0.36"
quote = "1.0.7"
proc-macro2 = "1.0.19"